--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .message.right {
@@ -75,7 +77,7 @@ body {
 .bubble {
   background: var(--white);
   color: black;
-  padding: 14px 16px;
+  padding: 10px 14px;
   border-radius: 10px;
   max-width: 80%;
   font-size: 1.25rem
