--- a/style2.css
+++ b/style2.css
@@ -139,6 +139,7 @@ input[type="text"]::placeholder {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  font-size: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
