--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,6 @@
+/* imports font (manrope) */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap');
+
 /* colors */
 :root {
   --blue: #2F5593;
@@ -18,7 +21,7 @@ body {
   min-height: 100vh;
   background: url('background.jpg') no-repeat center center fixed;
   background-size: cover;
-  font-family: sans-serif;
+  font-family: 'Manrope', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,4 +148,11 @@ input[type="text"]::placeholder {
   justify-content: center;
   border: none;
   cursor: pointer;
+  padding: 0;
+}
+
+#sendBtn img {
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
 }
