--- a/public/style2.css
+++ b/public/style2.css
@@ -236,7 +236,7 @@ input[type="text"]::placeholder {
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  transition: background 0.2s;
+  /*transition: background 0.2s;*/
 }
 
 .styled-btn:hover {
